@@ -77,7 +77,7 @@ TRANSLATIONS += \
 
 unix {
 
-	#VARIABLES
+	# variables
 	OBJECTS_DIR = .obj
 	MOC_DIR     = .moc
 	UI_DIR      = .ui
@@ -86,12 +86,15 @@ unix {
 		PREFIX = /usr/local
 	}
 
-	BINDIR = $$PREFIX/bin
-	DATADIR = $$PREFIX/share
+	BINDIR = $(bindir)
+	DATADIR = $(datadir)
+	LOCALEDIR = $(localedir)
 
-	DEFINES += DATADIR=\"$$DATADIR\" PKGDATADIR=\"$$PKGDATADIR\"
+	DEFINES += BINDIR=\"$$BINDIR\"
+	DEFINES += DATADIR=\"$$DATADIR\"
+	DEFINES += LOCALEDIR=\"$$LOCALEDIR\"
 
-	#MAKE INSTALL
+	# make install
 	INSTALLS += target desktop icon
 
 	target.path = $$BINDIR
